--- a/components/addressItem/index.wxss
+++ b/components/addressItem/index.wxss
@@ -31,6 +31,19 @@
   width: 28rpx;
   height: 28rpx;
 }
+
+.typeClass {
+  padding: 0rpx 10rpx;
+  background: #fff;
+  display: inline;
+  border: 2rpx solid rgba(108, 65, 39, 1);
+  border-radius: 15rpx;
+  font-size: 20rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: 500;
+  color: rgba(108, 65, 39, 1);
+  line-height: 24rpx;
+}
 .orderContentRight{
   padding-right: 28rpx;
 }
