--- a/pages/money/money.wxml
+++ b/pages/money/money.wxml
@@ -1,10 +1,10 @@
 <!--pages/money/money.wxml-->
 <view class='backBox'>
-<image src='./res/img/bonus-bg.png'></image>
+  <image src='./res/img/bonus-bg.png'></image>
   <view class='textBox'>
     <view class='moneyBox'>
       <view>￥</view>
-      <view>1500.00</view>
+      <view>{{userInfo.yue}}</view>
     </view>
     <view class='info'>总资产（元）</view>
   </view>
@@ -17,36 +17,21 @@
   </view>
 
   <view class='listBox'>
-    <view class='itemBox'>
+    <view class='itemBox' wx:for='{{cardList}}' wx:key='index'>
       <view class='itemLeft'>
-        <view wx:if='{{showId == 0 ? true : false}}' class='userImg'><image src=''></image></view>
+        <view wx:if='{{showId == 0 ? true : false}}' class='userImg'>
+          <image src='{{item.avatar}}'></image>
+        </view>
         <view class='leftText'>
-          <view>微信昵称</view>
-          <view>2019.03.03 12:02:03</view>
+          <view>{{item.nickname ? item.nickname:"储值金额"}}</view>
+          <view>{{item.pay_time?item.pay_time:item.create_time}}</view>
         </view>
       </view>
       <view class='itemRight'>
-        <view>50.00</view>
+        <view>{{item.money}}</view>
         <view>已到账</view>
       </view>
     </view>
-
- <view class='itemBox'>
-      <view class='itemLeft'>
-        <view wx:if='{{showId == 0 ? true : false}}' class='userImg'><image src=''></image></view>
-        <view class='leftText'>
-          <view>微信昵称</view>
-          <view>2019.03.03 12:02:03</view>
-        </view>
-      </view>
-      <view class='itemRight'>
-        <view>50.00</view>
-        <view>已到账</view>
-      </view>
-    </view>
-
-
-
   </view>
-  
+
 </view>
