--- a/pages/money/money.wxss
+++ b/pages/money/money.wxss
@@ -1,10 +1,12 @@
 /* pages/money/money.wxss */
-.backBox{
+
+.backBox {
   position: relative;
   width: 100%;
   height: 265rpx;
 }
-.backBox image{
+
+.backBox image {
   z-index: -1;
   position: absolute;
   height: 100%;
@@ -16,44 +18,49 @@
   flex-direction: column;
   align-items: center;
 }
-.moneyBox{
+
+.moneyBox {
   display: flex;
   flex-direction: row;
   color: #fff;
   align-items: flex-end;
 }
-.backBox{
+
+.backBox {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
 }
-.moneyBox view:first-child{
+
+.moneyBox view:first-child {
   font-size: 24rpx;
 }
-.moneyBox view:last-child{
-font-family:PingFang-SC-Heavy;
-font-weight:800;
-color:rgba(255,255,255,1);
-margin-left: 10rpx;
+
+.moneyBox view:last-child {
+  font-family: PingFang-SC-Heavy;
+  font-weight: 800;
+  color: rgba(255, 255, 255, 1);
+  margin-left: 10rpx;
+  font-size: 46rpx;
 }
-.textBox .info{
-  font-size:24rpx;
-  font-family:PingFang-SC-Regular;
-  font-weight:400;
-  color:rgba(255,255,255,1);
-  opacity:0.31;
+
+.textBox .info {
+  font-size: 24rpx;
+  font-family: PingFang-SC-Regular;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 1);
+  opacity: 0.31;
   margin-top: 20rpx;
 }
 
-
-.mainBox{
-  background:rgba(255,255,255,1);
-  border-radius:10rpx;
+.mainBox {
+  background: rgba(255, 255, 255, 1);
+  border-radius: 10rpx;
   width: 100%;
   height: 107rpx;
 }
 
-.navBox{
+.navBox {
   width: 100%;
   height: 107rpx;
   background: #fff;
@@ -63,69 +70,78 @@ margin-left: 10rpx;
   align-items: center;
 }
 
-.navItem{
-  font-size:32rpx;
-  font-family:PingFang-SC-Medium;
-  font-weight:500;
-  color:rgba(153,153,153,1);
+.navItem {
+  font-size: 32rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: 500;
+  color: rgba(153, 153, 153, 1);
 }
-.navActive{
-  font-weight:800;
-  color:rgba(130,76,31,1);
+
+.navActive {
+  font-weight: 800;
+  color: rgba(130, 76, 31, 1);
 }
-.userImg{
-  width:72rpx;
-  height:72rpx;
+
+.userImg {
+  width: 72rpx;
+  height: 72rpx;
 }
-.userImg image{
-  width:72rpx;
-  height:72rpx;
-  border-radius:50%;
+
+.userImg image {
+  width: 72rpx;
+  height: 72rpx;
+  border-radius: 50%;
 }
-.itemBox{
+
+.itemBox {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   background: #fff;
   border-bottom: 2rpx solid #f2f2f2;
-  padding:40rpx 25rpx 40rpx 25rpx;
-
+  padding: 40rpx 25rpx 40rpx 25rpx;
 }
-.itemLeft{
+
+.itemLeft {
   display: flex;
   flex-direction: row;
   align-items: center;
 }
-.itemLeft .leftText{
+
+.itemLeft .leftText {
   margin-left: 20rpx;
 }
-.itemLeft .leftText view:first-child{
-  font-size:28rpx;
-  font-family:PingFang-SC-Medium;
-  font-weight:500;
-  color:rgba(51,51,51,1);
+
+.itemLeft .leftText view:first-child {
+  font-size: 28rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: 500;
+  color: rgba(51, 51, 51, 1);
 }
-.itemLeft .leftText view:last-child{
-  font-size:24rpx;
-  font-family:PingFang-SC-Medium;
-  font-weight:500;
-  color:rgba(153,153,153,1);
+
+.itemLeft .leftText view:last-child {
+  font-size: 24rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: 500;
+  color: rgba(153, 153, 153, 1);
   margin-top: 8rpx;
 }
 
-.itemRight view:first-child{
-  font-size:28rpx;
-  font-family:PingFang-SC-Heavy;
-  font-weight:800;
-  color:rgba(130,76,31,1);
+.itemRight view:first-child {
+  font-size: 28rpx;
+  font-family: PingFang-SC-Heavy;
+  font-weight: 800;
+  color: rgba(130, 76, 31, 1);
 }
-.itemRight view:last-child{
-  font-size:24rpx;
-  font-family:PingFang-SC-Medium;
-  font-weight:500;
-  color:rgba(153,153,153,1);
+
+.itemRight view:last-child {
+  font-size: 24rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: 500;
+  color: rgba(153, 153, 153, 1);
   margin-top: 8rpx;
 }
-.listBox{
+
+.listBox {
   margin-top: 20rpx;
 }
