--- a/pages/user/incomeInfo/incomeInfo.wxml
+++ b/pages/user/incomeInfo/incomeInfo.wxml
@@ -16,15 +16,15 @@
     <view class='navItem' class='"navItem "+ {{item.id == showId ? "navActive": ""}}' data-id='{{item.id}}' bindtap='changeNav' wx:for='{{navList}}' wx:key='index'>{{item.title}}</view>
   </view>
 
-  <view class='listBox'>
+  <view class='listBox' wx:for='{{infoList}}' wx:key='index'>
     <view class='itemBox'>
       <view class='itemTop'>
       
         <view class='itemLeft'>
-          <view class='userImg'><image src=''></image></view>
+          <view class='userImg'><image src='{{item.xdr_avatar}}'></image></view>
           <view class='leftText'>
-            <view>微信昵称</view>
-            <view>2019.03.03 12:02:03</view>
+            <view>{{item.xdr_nickname}}</view>
+            <view>{{item.create_time}}</view>
           </view>
         </view>
         <view class='itemRight'>
@@ -36,35 +36,35 @@
         <view class='itemBottomItem'>
           <view class='bottomItemBox'>
             <view class='bottonItemTitle'>推荐人</view>
-            <view class='bottonItemValue'>森客啤酒[执行合伙人]</view>
+            <view class='bottonItemValue'>{{item.tjr_nickname}}[{{item.tjr_level}}]</view>
           </view>
           <view class='bottomItemBox'>
-            <view class='bottonItemTitle'>简介消费奖励</view>
-            <view class='bottonItemValue'>+1000</view>
-          </view>
-        </view>
-
-        
-        <view class='itemBottomItem'>
-          <view class='bottomItemBox'>
-            <view class='bottonItemTitle'>推荐人</view>
-            <view class='bottonItemValue'>森客啤酒[执行合伙人]</view>
-          </view>
-          <view class='bottomItemBox'>
-            <view class='bottonItemTitle'>简介消费奖励</view>
-            <view class='bottonItemValue'>2019.03.03 12:35</view>
+            <view class='bottonItemTitle'>{{fxType[item.fx_type]}}消费奖励</view>
+            <view class='bottonItemValue'>+{{item.money}}</view>
           </view>
         </view>
 
         
         <view class='itemBottomItem'>
           <view class='bottomItemBox'>
-            <view class='bottonItemTitle'>推荐人</view>
-            <view class='bottonItemValue'>森客啤酒[执行合伙人]</view>
+            <view class='bottonItemTitle'>消费金额</view>
+            <view class='bottonItemValue'>{{item.pay_money}}</view>
           </view>
           <view class='bottomItemBox'>
-            <view class='bottonItemTitle'>简介消费奖励</view>
-            <view class='bottonItemValue'>+1000</view>
+            <view class='bottonItemTitle'>下单时间</view>
+            <view class='bottonItemValue'>{{item.create_time}}</view>
+          </view>
+        </view>
+
+        
+        <view class='itemBottomItem'>
+          <view class='bottomItemBox'>
+            <view class='bottonItemTitle'>订单号</view>
+            <view class='bottonItemValue'>{{item.order_sn}}</view>
+          </view>
+          <view class='bottomItemBox'>
+            <view class='bottonItemTitle'>分红比例</view>
+            <view class='bottonItemValue'>{{item.num}}%</view>
           </view>
         </view>
       
