--- a/components/addressItem/index.wxss
+++ b/components/addressItem/index.wxss
@@ -55,6 +55,7 @@
   font-family:PingFang-SC-Medium;
   font-weight:500;
   color:rgba(51,51,51,1);
+  align-items: center;
 }
 .orderContentLeftBottom{
   font-size:28rpx;
@@ -62,6 +63,9 @@
   font-weight:500;
   color:rgba(153,153,153,1);
   line-height:44rpx;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .icon{
@@ -77,7 +81,7 @@
   display: inline;
   padding:4rpx 17rpx;
   background:rgba(204,0,0,1);
-  border-radius:15rpx;
+  border-radius:500rpx;
   font-size:20rpx;
   font-family:PingFang-SC-Medium;
   font-weight:500;
