--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -17,7 +17,6 @@
 swiper {
   height: 750rpx;
 }
-
 swiper image {
   width: 100%;
 }
@@ -171,11 +170,11 @@ image {
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 621rpx;
 }
 
+
+
 .goodBox {
-  height: 521rpx;
   overflow-y: scroll;
 }
 
@@ -226,6 +225,11 @@ image {
 
 .goodBox {
   overflow-y: scroll;
+  margin-bottom:100rpx;
+}
+
+.optionsBox{
+  max-height: 700rpx;
 }
 
 .orderOption {
@@ -277,7 +281,6 @@ image {
 }
 
 .infoBox {
-  margin-top: 20rpx;
 }
 
 .infoItem {
