--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -2,7 +2,7 @@
 
 <view class='navHeader'>
   <view class='navList'>
-    <view wx:for='{{navHeaderList}}' bindtap='changeNav' data-id='{{item.id}}' wx:key='index' class='"navItem "+{{currentShowPageId == item.id ? "activeNav" : ""}}' >
+    <view wx:for='{{navHeaderList}}' bindtap='changeNav' data-id='{{item.id}}' wx:key='index' class='"navItem "+{{currentShowPageId == item.id ? "activeNav" : ""}}'>
       {{item.title}}
     </view>
   </view>
@@ -11,7 +11,8 @@
 
 
 <view class='main'>
-  <view class='itemBox' wx:for='{{orderList}}' wx:key='index'>
+  <loading wx:if='{{loadingFlag}}'></loading>
+  <view wx:if='{{!loadingFlag}}' class='itemBox' wx:for='{{orderList}}' wx:key='index'>
     <view class='titleBox'>
       <view class='ordNo'>{{item.ordersn}}</view>
       <view class='status'>
@@ -20,17 +21,20 @@
     </view>
     <view class='contentBox' data-item='{{item}}' bindtap='btnFun'>
       <view class='infoBox'>
-        <view class='imgBox'><image mode='aspectFill' src='{{item.listimg}}'></image></view>
+        <view class='imgBox'>
+          <image mode='aspectFill' src='{{item.listimg}}'></image>
+        </view>
         <view class='infoTextBox'>
           <view class='infoText'>{{item.title}}{{item.optionname}}</view>
           <view class='infoPriceBox'>
-          <view class='infoPrice'>￥{{item.price}}</view>
+            <view class='infoPrice'>￥{{item.price}}</view>
             <view class='infoNum'>x{{item.total}}</view>
-            
+
           </view>
-          
+
         </view>
-      </view><!--商品详情-->
+      </view>
+      <!--商品详情-->
       <view class='priceBox'>
         <view class='dedBox'>
           <view>储值抵扣</view>
@@ -40,7 +44,8 @@
           <view class='totlePriceTitle'>合计</view>
           <view class='totlePricePrice'>￥{{item.pay_money}}</view>
         </view>
-      </view><!--价格统计-->
+      </view>
+      <!--价格统计-->
     </view>
     <view wx:if="{{(item.status == -1 ? goodStatus[5].btnTitle : goodStatus[item.status].btnTitle) != ''}}" class='btnBox'>
       <view class='btn' data-item='{{item}}' bindtap='btnFun'>{{item.status == -1 ? goodStatus[5].btnTitle : goodStatus[item.status].btnTitle}}</view>
