--- a/pages/order/orderdetail/orderdetail.wxss
+++ b/pages/order/orderdetail/orderdetail.wxss
@@ -62,6 +62,16 @@
   display: flex;
   flex-direction: row;
 }
+.userTitleBox .fontTitle{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.userContentBox .fontTitle{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
 .realName{
   display: flex;
   flex-direction: row;
@@ -87,12 +97,12 @@
 }
 .addreType{
   display: inline;
-  padding: 6rpx 13rpx;
+  padding:4rpx 13rpx;
   margin-right: 15rpx;
   align-self: center;
   text-align: center;
   background:rgba(204,0,0,1);
-  border-radius:15rpx;
+  border-radius:105rpx;
   font-size:20rpx;
   font-family:PingFang-SC-Medium;
   font-weight:500;
