--- a/pages/user/freeze/freeze.wxml
+++ b/pages/user/freeze/freeze.wxml
@@ -4,7 +4,7 @@
   <view class='textBox'>
     <view class='moneyBox'>
       <view>￥</view>
-      <view>1500.00</view>
+      <view>{{dj_money}}</view>
     </view>
     <view class='info'>总资产（元）</view>
   </view>
@@ -16,14 +16,15 @@
   </view>
 
   <view class='listBox'>
-    <view class='itemBox'>
+
+    <view class='itemBox' wx:for='{{bonus_log}}' wx:key='index'>
       <view class='itemTop'>
       
         <view class='itemLeft'>
-          <view class='userImg'><image src=''></image></view>
+          <view class='userImg'><image src='{{item.xdr_avatar}}'></image></view>
           <view class='leftText'>
-            <view>微信昵称</view>
-            <view>2019.03.03 12:02:03</view>
+            <view>{{item.xdr_nickname}}</view>
+            <view>{{item.create_time}}</view>
           </view>
         </view>
         <view class='itemRight'>
@@ -35,35 +36,46 @@
         <view class='itemBottomItem'>
           <view class='bottomItemBox'>
             <view class='bottonItemTitle'>推荐人</view>
-            <view class='bottonItemValue'>森客啤酒[执行合伙人]</view>
+            <view class='bottonItemValue'>{{item.tjr_nickname}}[{{item.tjr_level}}]</view>
           </view>
           <view class='bottomItemBox'>
-            <view class='bottonItemTitle'>简介消费奖励</view>
-            <view class='bottonItemValue'>+1000</view>
-          </view>
-        </view>
-
-        
-        <view class='itemBottomItem'>
-          <view class='bottomItemBox'>
-            <view class='bottonItemTitle'>推荐人</view>
-            <view class='bottonItemValue'>森客啤酒[执行合伙人]</view>
-          </view>
-          <view class='bottomItemBox'>
-            <view class='bottonItemTitle'>简介消费奖励</view>
-            <view class='bottonItemValue'>2019.03.03 12:35</view>
+            <view class='bottonItemTitle'>{{item.fx_type}}消费奖励</view>
+            <view class='bottonItemValue' style='color:rgba(130,76,31,1)!important;'>????</view>
           </view>
         </view>
 
         
         <view class='itemBottomItem'>
           <view class='bottomItemBox'>
-            <view class='bottonItemTitle'>推荐人</view>
-            <view class='bottonItemValue'>森客啤酒[执行合伙人]</view>
+            <view class='bottonItemTitle'>消费金额</view>
+            <view class='bottonItemValue'>????</view>
           </view>
           <view class='bottomItemBox'>
-            <view class='bottonItemTitle'>简介消费奖励</view>
-            <view class='bottonItemValue'>+1000</view>
+            <view class='bottonItemTitle'>下单时间</view>
+            <view class='bottonItemValue'>{{item.create_time}}</view>
+          </view>
+        </view>
+
+        
+        <view class='itemBottomItem'>
+          <view class='bottomItemBox'>
+            <view class='bottonItemTitle'>订单号</view>
+            <view class='bottonItemValue'>{{item.order_sn}}</view>
+          </view>
+          <view class='bottomItemBox'>
+            <view class='bottonItemTitle'>分红比例</view>
+            <view class='bottonItemValue'>{{item.num}}%</view>
+          </view>
+        </view>
+
+         <view class='itemBottomItem'>
+          <view class='bottomItemBox'>
+            <view class='bottonItemTitle'>清空冻结金额剩余时间</view>
+            <view class='bottonItemValue'>{{item.dongjie_time}}天</view>
+          </view>
+          <view class='bottomItemBox'>
+            <view class='bottonItemTitle'></view>
+            <view class='bottonItemValue'></view>
           </view>
         </view>
       
